// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#routes no template, ts imports 1`] = `
Object {
  "Content": Object {
    "all": [Function],
    "data": Object {
      "foo": "bar",
    },
    "layout": "<div class=\\"svelteComponent\\">Layout</div>",
    "permalink": [Function],
    "template": "Content.svelte",
    "templateComponent": "<div class=\\"svelteComponent\\">test/___ELDER___/compiled/Content.js</div>",
  },
  "Home": Object {
    "all": [Function],
    "data": [Function],
    "layout": "<div class=\\"svelteComponent\\">Layout.svelte</div>",
    "permalink": [Function],
    "template": "Home.svelte",
    "templateComponent": "<div class=\\"svelteComponent\\">test/src/routes/Home/Home.svelte</div>",
  },
}
`;

exports[`#routes works 1`] = `
Object {
  "Content": Object {
    "all": [Function],
    "data": Object {
      "foo": "bar",
    },
    "layout": "<div class=\\"svelteComponent\\">Layout</div>",
    "permalink": [Function],
    "template": "Default",
    "templateComponent": "<div class=\\"svelteComponent\\">Default</div>",
  },
  "Home": Object {
    "all": [Function],
    "data": [Function],
    "layout": "<div class=\\"svelteComponent\\">Layout.svelte</div>",
    "permalink": [Function],
    "template": "Home.svelte",
    "templateComponent": "<div class=\\"svelteComponent\\">test/src/routes/Home/Home.svelte</div>",
  },
}
`;
